--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
-    "gridfs-stream": "^1.1.1",
+    "date-fns": "^3.6.0",
+    "fabric": "^6.0.2",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.419.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
@@ -24,7 +26,6 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@types/gridfs-stream": "^0.5.39",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
