--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@types/uuid": "^10.0.0",
+    "client-only": "^0.0.1",
     "date-fns": "^3.6.0",
     "fabric": "^6.0.2",
     "ioredis": "^5.4.1",
@@ -23,6 +25,9 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "server-only": "^0.0.1",
+    "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
