--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@radix-ui/themes": "^3.1.3",
     "@types/uuid": "^10.0.0",
     "client-only": "^0.0.1",
     "date-fns": "^3.6.0",
@@ -23,10 +24,12 @@
     "lucide-react": "^0.419.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "server-only": "^0.0.1",
+    "tailwind-merge": "^2.5.2",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
